# Variable

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README  README.md  TODO
inc/: Variable.hpp
include/: Variable.hpp
src/: test.cpp
tests/: CMakeLists.txt  unittest-Variable.cpp
